--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             border: 3px solid green;
             margin-top: 50px;
         }
-
-        #body {
+/* 
+        /* #body {
             display: flex;
             justify-content: space-evenly;
         }
@@ -163,27 +163,27 @@
             width: 14%;
             margin-top: 5px;
             margin-left: 5px;
-            /* border: 1px solid red; */
+            border: 1px solid red;
             border-radius: 35px; 
         }
         .srch{
             margin-top:22px ;
             margin-left: 10px;
-        }
+        /* }
         .srch input{
             height: 40px;
             width: 170%;
             border-radius: 20px;
         }
-        /* .srch >button{
-            margin-top:20px;
-        } */
+        .srch >button{
+            margin-top:20px; */
+        }
         .btn{
             margin-top:16%;
             padding-right: 20px;
         }
         @media screen and (max-width:500px){
-            
+             */ */
         }
 
     </style>
