--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,6 @@
       /* border: 1px solid red; */
     }
 
-    .navbar {
-      width: 100%;
-      height: 100px;
-      /* border: 1px solid red; */
-      display: flex;
-      /* position: sticky; */
-    }
 
     .spartan {
       width: 100%;
@@ -54,6 +47,7 @@
 
       .navbar {
         flex-direction: row;
+        /* height:100%; */
       }
 
       .spartan {
@@ -81,7 +75,12 @@
       height: 60px;
       margin-top: 20px;
       padding-left: 30px;
+      /* display: flex; */
     }
+    .left-side{
+      display: flex;
+    }
+
 
     .i-t {
       background-color: white;
@@ -102,19 +101,21 @@
     }
 
     .right-side {
+      border: 1px solid red;
       display: flex;
-      align-items: center;
+      margin-left: 50% ;
+      margin-top:-5%;
+      justify-content: space-evenly;
+      padding-right: 15%;
     }
 
     .right>i {
-      justify-content: space-evenly;
-      margin-left: 100px;
-
+align-items: center;
 
     }
 
     .right>h3 {
-      margin-left: 90px;
+      text-align: center;
     }
 
     .l1 {
@@ -209,27 +210,29 @@
       padding-left: 10%;
     }
 
-    .news{
+    .news {
       margin-left: 10px;
       margin-top: 20px;
     }
-    .lis h2{
+
+    .lis h2 {
       text-align: center;
       font-size: bolder;
       font-weight: 800;
       background-color: brown;
     }
-    
   </style>
 </head>
 
 <body>
   <div id="fullpage">
     <div class="navbar">
-      <img src="./linkedin img2.png" alt="">
-      <div class="i-t">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="search">
+      <div class="left-side">
+        <img src="./linkedin img2.png" alt="">
+        <div class="i-t">
+          <i class="fa-solid fa-magnifying-glass"></i>
+          <input type="text" placeholder="search">
+        </div>
       </div>
       <div class="right-side">
         <div class="right">
