login page facebook

--- a/loginface.html
+++ b/loginface.html
@@ -51,6 +51,27 @@
         }
         .btn{
             background-color: rgb(30, 253, 30);
+            color: white;
+        }
+        @media screen and (max-width:600px) {
+            .f-page{
+                flex-direction: column;
+                height: 200px;
+                width: 100%;
+            }
+            .lside{
+            height: 200px ;
+            width: 100%;
+            margin-top:14% ;
+            margin-left: 15%;
+        }
+        .rside{
+            height: 200px;
+            width: 100%;
+            margin-top: 12%;
+            margin-left: 15%;
+        
+        }
         }
         
 </style>
