--- a/ajio.html
+++ b/ajio.html
@@ -15,13 +15,11 @@
 
         .f-page {
             height: 700px;
-            border: 1px solid red;
         }
 
         .navbar {
             height: 100px;
             width: 100%;
-            border: 1px solid black;
         }
 
         .navbar {
@@ -61,7 +59,6 @@
 
         .div2 {
             background-color: #fffded;
-            border: 1px solid black;
             height: 35px;
             width: 25%;
             border-radius: 17px;
@@ -135,7 +132,28 @@
         .m10{
             display: flex;
         }
-
+       .m2{
+        display: flex;
+       }
+       .m3{
+        display: flex;
+       }
+       .m4{
+        display: flex;
+       }
+       .m12{
+        display: flex;
+       }
+       .m13{
+        display: flex;
+       }
+       .m14{
+        display: flex;
+       }
+       .mtech{
+        margin-top: -45px;
+        display: flex;
+       }
     </style>
 
 </head>
@@ -146,7 +164,7 @@
             <div class="right-side">
                 <h1>AJIO</h1>
             </div>
-            <div class="left-side">
+            <div class="left-side">                                                                                             
                 <div class="div1">
                     <h3>MEN</h3>
                     <h3>WOMEN</h3>
@@ -211,6 +229,89 @@
                  <div>
                     <img src="./btn.avif" alt="">
                  </div>
+                 <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Trendswithbenefits-P4-Ethnicwear-AcaiAvaasa-Min50.jpg" alt="">
+                 </div>
+                 <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P2-Trends-AvaasaDNMX-Min60.jpg" alt="">
+                 </div>
+                 <div>
+                    <img src="http://127.0.0.1:5501/btn.avif" alt="">
+                 </div>
+                 <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P2-Trends-AvaasaDNMX-Min60.jpg" alt="">
+                 </div>
+                 <div>
+                    <img src="http://127.0.0.1:5501/btn.avif" alt="">
+                 </div>
+                 <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P7-MakeupSkincare-BiotiqueLakme-Starting129.jpg" alt="">
+                 </div>
+                 <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-Sectionheader.jpg" alt="">
+                 </div>
+                 <div class="m2">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P1-GAP-Upto25.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P2-Produkt-Upto50.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P3-Arbunore-Min50.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P4-Avaasa-Min30.jpg" alt="">
+                 </div>
+                 <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-JIT-SectionHeaderStrip.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-JIT-P6-Brands-upto75.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-Sectionheader.jpg" alt="">
+                </div>
+                <div class="m3">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P4-Formalwear-AllenSollyBlackberrys-Starting899.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P3-LevisWrangler-JeansJegings-Starting999.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P2-Dresses-VeroModaONLY-Starting599.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P1-TopsTees-USPAPuma-Starting499.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-ForHER-Sectionheader.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-d-mhp-uhphim-p4-brands-starting199.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Accessories-SectionHeader.jpg" alt="">
+                </div>
+                <div class="m4">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-wardrobedarlings-grooming.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-wardrobedarlings-fragrances.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-wardrobedarlings-watches.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-wardrobedarlings-home.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-header.jpg" alt="">
+                </div>
+                <div class="m12">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-trends.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-ajiogold.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-up&comingbrands.jpg" alt="">
+                </div>
+                <div class="m13">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-max.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-sneakerhood.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-watches.jpg" alt="">
+                </div>
+                <div class="m14">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-azorte.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-home.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-wedding.jpg" alt="">
+                </div>
+                <div>
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/08032022-D-unisex-ajiocares-strip11.jpg" alt="">
+                </div>
+                <div class="logo">
+
+
+                </div>
+
             </div>
          
         </div>
