--- a/ajio2.html
+++ b/ajio2.html
@@ -142,6 +142,11 @@
             margin-top: 15px;
             opacity: 0.8;
         }
+        .h2t{
+            margin-top: 20px;
+            margin-left: 20%;
+            opacity: 0.9;
+        }
 
        
     </style>
@@ -197,22 +202,22 @@
                     <h4>MORE</h4>
                   </div>           
                   <div class="h2t">
-                    <h2>+  Price</h2>
+                    <h3>+  Price</h3>
                   </div>
                   <div class="h2t">
-                    <h2>+  Brands</h2>
+                    <h3>+  Brands</h3>
                   </div>
                   <div class="h2t">
-                    <h2>+  Occasion</h2>
+                    <h3>+  Occasion</h3>
                   </div>
                   <div class="h2t">
-                    <h2>+  Discount</h2>
+                    <h3>+  Discount</h3>
                   </div>
                   <div class="h2t">
-                    <h2>+  Colors</h2>
+                    <h3>+  Colors</h3>
                   </div>
                   <div class="h2t">
-                    <h2>+  Size & Fit</h2>
+                    <h3>+  Size & Fit</h3>
                   </div>
             </div>
             
