--- a/ajio.html
+++ b/ajio.html
@@ -28,14 +28,38 @@
             background-color: #ffffff;
         }
 
+        @media screen and(max-width:450px) {
+            .navbar {
+                flex-direction: row;
+                height: 20px;
+                width: 30%;
+            }
+
+            .right-side {
+                flex-direction: row;
+                height: 20px;
+                width: 30%;
+                margin-left: 10%;
+            }
+
+            .div1 {
+                flex-direction: column;
+                height: 20px;
+                width: 30%;
+                margin-left: 20%;
+            }
+        }
+
+
         .right-side {
             margin-top: 30px;
             margin-right: 20%;
         }
-        .right-side h1{
-            font-size:45px;
-            font-weight:800;
-            font-style:normal;
+
+        .right-side h1 {
+            font-size: 45px;
+            font-weight: 800;
+            font-style: normal;
         }
 
         .left-side {
@@ -89,71 +113,218 @@
         .div3 i {
             margin-left: 15px;
         }
-        .cont{
+
+        .cont {
             height: 600px;
             width: 100%;
-            border:1px solid black;
+            border: 1px solid black;
         }
-        .cont1{
+
+        .cont1 {
             height: 50px;
             width: 100%;
-            background-color:#fff8eb;
+            background-color: #fff8eb;
         }
-        .ccont1{
+
+        .ccont1 {
             display: flex;
             align-items: center;
             margin-left: 35%;
-        }.ccont1 h1{
+        }
+
+        .ccont1 h1 {
             margin-top: 7px;
         }
-        .ccont1 p{
+
+        .ccont1 p {
             margin-top: 10px;
-            margin-left:25px;
+            margin-left: 25px;
         }
-        .p1{
+
+        .p1 {
             border: 1px solid red;
             background-color: white;
             border: none;
         }
-        .middlec{
+
+        .middlec {
             height: 120px;
             width: 100%;
         }
-        .middlem{
+
+        .middlem {
             height: 500px;
             width: 100%;
             border: 1px ssolid red;
         }
-        .dhu{
+
+        .dhu {
             height: 600px;
             width: 35%;
             display: flex;
         }
-        .m10{
+
+        .m10 {
             display: flex;
         }
-       .m2{
-        display: flex;
-       }
-       .m3{
-        display: flex;
-       }
-       .m4{
-        display: flex;
-       }
-       .m12{
-        display: flex;
-       }
-       .m13{
-        display: flex;
-       }
-       .m14{
-        display: flex;
-       }
-       .mtech{
-        margin-top: -45px;
-        display: flex;
-       }
+
+        .m2 {
+            display: flex;
+        }
+
+        .m3 {
+            display: flex;
+        }
+
+        .m4 {
+            display: flex;
+        }
+
+        .m12 {
+            display: flex;
+        }
+
+        .m13 {
+            display: flex;
+        }
+
+        .m14 {
+            display: flex;
+        }
+
+        .mtech {
+            margin-top: -45px;
+            display: flex;
+        }
+
+        @media screen and (max-width:700px) {
+            .middlec>img {
+                /* flex-direction: column; */
+                width: 100%;
+                height: 100px;
+            }
+
+            .middlem>img {
+                width: 100%;
+                height: 250px;
+                margin-top: -20px;
+            }
+
+            .mtech {
+                width: 100%;
+                height: 30px;
+                margin-top: -60%;
+            }
+
+            .dhu>img {
+                height: 100%;
+                width: 124px;
+                margin-top: -10px;
+            }
+
+            .m10>img {
+                height: 100%;
+                width: 100px;
+            }
+
+            .zz1>img{
+                width: 100%;
+                height: 100px;
+            }
+            .zz2>img{
+                width: 100%;
+                height: 100px;
+            }
+            .zz3>img{
+                width: 100%;
+                height: 100px;
+            }
+            .zz12>img{
+                width: 100%;
+                height: 200px;
+            }
+            .zz13>img{
+                width: 100%;
+                height: 200px;
+            }
+            .zz14>img{
+                width: 100%;
+                height: 100px;
+            }
+            .zz15>img{
+                width: 100%;
+                height: 200px;
+            }
+            .zz16>img{
+                width: 100%;
+                height: 100px;
+            }
+            .zz17>img{
+                width: 100%;
+                height: 200px;
+            }
+            .zz18>img{
+                width: 100%;
+                height: 100px;
+            }
+           .m2 >img{
+            width: 90%;
+            height: 130px;
+           }
+           .vv1 >img{
+            width: 100%;
+            height: 100px;
+           }
+           .vv2 >img{
+            width: 100%;
+            height: 200px;
+           }
+           .vv3 >img{
+            width: 100%;
+            height: 100px;
+           }
+           .m3 >img{
+            width: 25%;
+            height: 230px;
+           }
+           .ll1 >img{
+            width: 100%;
+            height: 100px;
+           }
+           .ll2 >img{
+            width: 100%;
+            height: 200px;
+           }
+           .ll3 >img{
+            width: 100%;
+            height: 100px;
+           }
+           .m4 >img{
+            width: 25%;
+            height: 200px;
+           }
+           .ll4 >img{
+            width: 100%;
+            height: 70px;
+           }
+           .m12 >img{
+            width: 30%;
+            height: 150px;
+           }
+           .m13 >img{
+            width: 30%;
+            height: 150px;
+           }
+           .m14 >img{
+            width: 30%;
+            height: 150px;
+           }
+           .ll5 >img{
+            width: 100%;
+            height: 100px;
+           }
+
+        }
     </style>
 
 </head>
@@ -164,9 +335,9 @@
             <div class="right-side">
                 <h1>AJIO</h1>
             </div>
-            <div class="left-side">                                                                                             
+            <div class="left-side">
                 <div class="div1">
-                    <h3>MEN</h3>
+                    <h3> <a href="ajio2.html">MEN</a></h3>
                     <h3>WOMEN</h3>
                     <h3>KIDS</h3>
                     <h3>INDIE</h3>
@@ -185,99 +356,108 @@
         <div class="cont">
             <div class="cont1">
                 <div class="ccont1">
-                <h1>Ends In</h1>
-                <p class="p1">01</p>
-                <p>d</p>
-                <p class="p1">02</p>
-                <p>h</p>
-                <p class="p1">43</p>
-                 <p>m</p>
-                 </div>
-                 <div class="middlec">
+                    <h1>Ends In</h1>
+                    <p class="p1">01</p>
+                    <p>d</p>
+                    <p class="p1">02</p>
+                    <p>h</p>
+                    <p class="p1">43</p>
+                    <p>m</p>
+                </div>
+                <div class="middlec">
                     <img src="./file ajio.avif" alt="img">
-                 </div>
-                 <div class="middlem">
-                  <img src="./ajio img mi.avif" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="middlem">
+                    <img src="./ajio img mi.avif" alt="">
+                </div>
+                <div class="mtech">
                     <img src="./pic ajio.avif" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div>
                     <img src="./pic2 ajio.avif" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div>
                     <img src="./pic3.avif" alt="">
-                 </div>
-                 <div class="dhu">
+                </div>
+                <div class="dhu">
                     <img src="./D-UHP-Rewards-Relianceone.avif" alt="">
                     <img src="./D-UHP-Rewards-Relianceone.avif" alt="">
                     <img src="./D-UHP-Rewards-Relianceone.avif" alt="">
-                 </div>
-                 <div class="m10">
+                </div>
+                <div class="m10">
                     <img src="./.vscode/ami.avif" alt="">
-                     <img src=" .vscode/D-UHP-SponsorBrands-P3-Adidas-4060.avif" alt="">
-                    <img src=" .vscode/D-UHP-SponsorBrands-P3-Adidas-4060.avif"alt="">
+                    <img src=" .vscode/D-UHP-SponsorBrands-P3-Adidas-4060.avif" alt="">
+                    <img src=" .vscode/D-UHP-SponsorBrands-P3-Adidas-4060.avif" alt="">
                     <img src=".vscode/shouse.avif" alt="">
 
-                 </div>
-                 <div>
+                </div>
+                <div class="zz1">
                     <img src="./imgc.avif" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="zz2">
                     <img src="./imh.avif" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="zz3">
                     <img src="./btn.avif" alt="">
-                 </div>
-                 <div>
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Trendswithbenefits-P4-Ethnicwear-AcaiAvaasa-Min50.jpg" alt="">
-                 </div>
-                 <div>
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P2-Trends-AvaasaDNMX-Min60.jpg" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="zz12">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Trendswithbenefits-P4-Ethnicwear-AcaiAvaasa-Min50.jpg"
+                        alt="">
+                </div>
+                <div class="zz13">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P2-Trends-AvaasaDNMX-Min60.jpg"
+                        alt="">
+                </div>
+                <div class="zz14">
                     <img src="http://127.0.0.1:5501/btn.avif" alt="">
-                 </div>
-                 <div>
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P2-Trends-AvaasaDNMX-Min60.jpg" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="zz15">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P2-Trends-AvaasaDNMX-Min60.jpg"
+                        alt="">
+                </div>
+                <div class="zz16">
                     <img src="http://127.0.0.1:5501/btn.avif" alt="">
-                 </div>
-                 <div>
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P7-MakeupSkincare-BiotiqueLakme-Starting129.jpg" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="zz17">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-DailyBanner-P7-MakeupSkincare-BiotiqueLakme-Starting129.jpg"
+                        alt="">
+                </div>
+                <div class="zz18">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-Sectionheader.jpg" alt="">
-                 </div>
-                 <div class="m2">
+                </div>
+                <div class="m2">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P1-GAP-Upto25.jpg" alt="">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P2-Produkt-Upto50.jpg" alt="">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P3-Arbunore-Min50.jpg" alt="">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-AjioExclusives-P4-Avaasa-Min30.jpg" alt="">
-                 </div>
-                 <div>
+                </div>
+                <div class="vv1">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-JIT-SectionHeaderStrip.jpg" alt="">
                 </div>
-                <div>
+                <div class="vv2">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-UHP-D-JIT-P6-Brands-upto75.jpg" alt="">
                 </div>
-                <div>
+                <div class="vv3">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-Sectionheader.jpg" alt="">
                 </div>
                 <div class="m3">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P4-Formalwear-AllenSollyBlackberrys-Starting899.jpg" alt="">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P3-LevisWrangler-JeansJegings-Starting999.jpg" alt="">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P2-Dresses-VeroModaONLY-Starting599.jpg" alt="">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P1-TopsTees-USPAPuma-Starting499.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P4-Formalwear-AllenSollyBlackberrys-Starting899.jpg"
+                        alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P3-LevisWrangler-JeansJegings-Starting999.jpg"
+                        alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P2-Dresses-VeroModaONLY-Starting599.jpg"
+                        alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Westernwear-P1-TopsTees-USPAPuma-Starting499.jpg"
+                        alt="">
                 </div>
-                <div>
+                <div class="ll1">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-ForHER-Sectionheader.jpg" alt="">
                 </div>
-                <div>
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-d-mhp-uhphim-p4-brands-starting199.jpg" alt="">
+                <div class="ll2">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/12022023-d-mhp-uhphim-p4-brands-starting199.jpg"
+                        alt="">
                 </div>
-                <div>
+                <div class="ll3">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-UHP-Accessories-SectionHeader.jpg" alt="">
                 </div>
                 <div class="m4">
@@ -286,13 +466,14 @@
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-wardrobedarlings-watches.jpg" alt="">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-wardrobedarlings-home.jpg" alt="">
                 </div>
-                <div>
+                <div class="ll4">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-header.jpg" alt="">
                 </div>
                 <div class="m12">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-trends.jpg" alt="">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-ajiogold.jpg" alt="">
-                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-up&comingbrands.jpg" alt="">
+                    <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-up&comingbrands.jpg"
+                        alt="">
                 </div>
                 <div class="m13">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-max.jpg" alt="">
@@ -304,7 +485,7 @@
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-home.jpg" alt="">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/D-MHP-discoveronlinestores-wedding.jpg" alt="">
                 </div>
-                <div>
+                <div class="ll5">
                     <img src="https://assets.ajio.com/cms/AJIO/WEB/08032022-D-unisex-ajiocares-strip11.jpg" alt="">
                 </div>
                 <div class="logo">
@@ -313,7 +494,7 @@
                 </div>
 
             </div>
-         
+
         </div>
     </div>
 </body>
