--- a/ajio2.html
+++ b/ajio2.html
@@ -22,7 +22,7 @@
         .navbar {
             height: 100px;
             width: 100%;
-            /* border: 1px solid black; */
+            border: 1px solid black;
         }
 
         .navbar {
@@ -247,15 +247,33 @@
             /* margin-right: 10px; */
         }
 
-        .bb1 {
+        #ajio2 {
             display: flex;
+            flex-wrap:wrap;
+            margin-top: 25px;
+            margin-left: 3%;
+            justify-content: space-between;   
         }
-
-        .bb2 img {
+        /* img{
+            margin-left: 20px;
+        } */
+/* 
+        #ajio2 >img {
             height: 350px;
-            width: 100%;
+            width: 90%;
             margin-top: 20px;
-            margin-left: 5px;
+            margin-left: 10%;
+            /* margin-left: 10%; */
+        /* } */ 
+        h1{
+            margin-left: 30%;
+        }
+        span{
+            margin-left: 20%;
+        }
+        p{
+            margin-left: 38%;
+            /* color: rgb(250, 94, 94); */
         }
 
         .bb3 img {
@@ -480,20 +498,22 @@
                     <input type="text" placeholder="Relaince">
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
-                <div class="bb1">
+
+                <div id="ajio2">
                     <div class="bb2">
-                        <img src="https://assets.ajio.com/medias/sys_master/root/20220324/hmQq/623c6fdef997dd03e22cd5a7/-473Wx593H-463775643-blue-MODEL.jpg"
-                            alt="">
+                        <!-- <img src="https://assets.ajio.com/medias/sys_master/root/20220324/hmQq/623c6fdef997dd03e22cd5a7/-473Wx593H-463775643-blue-MODEL.jpg"
+                            alt=""> -->
                     </div>
                     <div class="bb3">
-                        <img src="https://assets.ajio.com/medias/sys_master/root/20220513/yZhx/627e2368f997dd03e2b9b097/-473Wx593H-462884254-blue-MODEL.jpg"
-                            alt="">
+                        <!-- <img src="https://assets.ajio.com/medias/sys_master/root/20220513/yZhx/627e2368f997dd03e2b9b097/-473Wx593H-462884254-blue-MODEL.jpg"
+                            alt=""> -->
                     </div>
                     <div class="bb4">
-                        <img src="https://assets.ajio.com/medias/sys_master/root/20211023/dEWu/61730697aeb2690110a3a43d/-473Wx593H-460453610-white-MODEL.jpg"
-                            alt="">
+                        <!-- <img src="https://assets.ajio.com/medias/sys_master/root/20211023/dEWu/61730697aeb2690110a3a43d/-473Wx593H-460453610-white-MODEL.jpg"
+                            alt=""> -->
                     </div>
-                </div>
+
+                <!-- </div>
                 <div class="heading">
                     <div class="hh1">
                         <h2>The Indian Garage Co</h2>
@@ -531,12 +551,13 @@
                         </div>
                         <h6>Offer Price $561</h6>
                     </div>
-                </div>
+                </div> -->
 
             </div>
 
         </div>
     </div>
+    <script src="./jjj.js"></script>
 </body>
 
 </html>
